Bug 1577124 - Improve compact mode bookmarks toolbar alignment. r=dao
I made the left and right padding in compact mode on the bookmarks toolbar smaller,
so that the first favicon lines up with the back button and the see more bookmarks button
lines up with the main menu.

Differential Revision: https://phabricator.services.mozilla.com/D43775

UltraBlame original commit: 00deeb71f9cd43808988d05805d47f40bbfd5164

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -271,6 +271,23 @@ padding
 :
 root
 [
+uidensity
+=
+compact
+]
+#
+PersonalToolbar
+{
+padding
+-
+inline
+:
+2px
+;
+}
+:
+root
+[
 sessionrestored
 ]
 #
